objects/redwing__Training_Plan_Section__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you plan to make all the items under this section optional</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <inlineHelpText>Number that defines the position in which this section will appear under the Learning Plan</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Section_Items__c</fullName>
        <label>Total Section Items</label>
        <summaryForeignKey>redwing__Training_Plan_Section_Item__c.redwing__Training_Plan_Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Sections</relationshipLabel>
        <relationshipName>Training_Plan_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Plan Section</label>
    <nameField>
        <label>Learning Plan Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plan Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>